--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,21 @@
 </head>
 
 <body>
+  <script>
+    window.onload = function() {
+       let xhr = new XMLHttpRequest();
+       xhr.onreadystatechange = function($evt){
+          if(xhr.readyState == 4 && xhr.status == 200){
+              let res = JSON.parse(xhr.responseText);
+              console.log("response: ",res);
+          }
+       }
+       xhr.open("PUT", "https://global.xirsys.net/_turn/MyFirstApp", true);
+       xhr.setRequestHeader ("Authorization", "Basic " + btoa("bibo:df320b6a-4b49-11ec-929d-0242ac130002") );
+       xhr.setRequestHeader ("Content-Type", "application/json");
+       xhr.send( JSON.stringify({"format": "urls"}) );
+    }
+</script>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
