--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <script>
+  <!-- <script>
     window.onload = function() {
        let xhr = new XMLHttpRequest();
        xhr.onreadystatechange = function($evt){
@@ -40,7 +40,7 @@
        xhr.setRequestHeader ("Content-Type", "application/json");
        xhr.send( JSON.stringify({"format": "urls"}) );
     }
-</script>
+</script> -->
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
